exports[`javascript array of tasks 1`] = `
Array [
  Object {
    "subtasks": Array [
      Object {
        "stderr": "",
        "stdout": "test script",
        "task": [Function],
        "title": "echo \"test script\"",
      },
      Object {
        "stderr": "",
        "stdout": "lint.default",
        "task": [Function],
        "title": "echo \"lint.default\"",
      },
    ],
    "task": [Function],
    "title": "check",
  },
]
`;

exports[`javascript deep task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "deeply nested thing",
    "task": [Function],
    "title": "l.s.t",
  },
]
`;

exports[`javascript default task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "default script",
    "task": [Function],
    "title": "default",
  },
]
`;

exports[`javascript simple string task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "test script",
    "task": [Function],
    "title": "test",
  },
]
`;

exports[`javascript task default 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "lint.default",
    "task": [Function],
    "title": "lint",
  },
]
`;

exports[`json array of tasks 1`] = `
Array [
  Object {
    "subtasks": Array [
      Object {
        "stderr": "",
        "stdout": "test script",
        "task": [Function],
        "title": "echo \"test script\"",
      },
      Object {
        "stderr": "",
        "stdout": "lint.default",
        "task": [Function],
        "title": "echo \"lint.default\"",
      },
    ],
    "task": [Function],
    "title": "check",
  },
]
`;

exports[`json deep task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "deeply nested thing",
    "task": [Function],
    "title": "l.s.t",
  },
]
`;

exports[`json default task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "default script",
    "task": [Function],
    "title": "default",
  },
]
`;

exports[`json simple string task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "test script",
    "task": [Function],
    "title": "test",
  },
]
`;

exports[`json task default 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "lint.default",
    "task": [Function],
    "title": "lint",
  },
]
`;

exports[`yml array of tasks 1`] = `
Array [
  Object {
    "subtasks": Array [
      Object {
        "stderr": "",
        "stdout": "test script",
        "task": [Function],
        "title": "echo \"test script\"",
      },
      Object {
        "stderr": "",
        "stdout": "lint.default",
        "task": [Function],
        "title": "echo \"lint.default\"",
      },
    ],
    "task": [Function],
    "title": "check",
  },
]
`;

exports[`yml deep task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "deeply nested thing",
    "task": [Function],
    "title": "l.s.t",
  },
]
`;

exports[`yml default task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "default script",
    "task": [Function],
    "title": "default",
  },
]
`;

exports[`yml simple string task 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "test script",
    "task": [Function],
    "title": "test",
  },
]
`;

exports[`yml task default 1`] = `
Array [
  Object {
    "stderr": "",
    "stdout": "lint.default",
    "task": [Function],
    "title": "lint",
  },
]
`;
